--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,11 @@
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
     "pm2": "^5.1.0",
+    "sequelize": "^6.12.0-alpha.1",
+    "sequelize-cli": "^6.3.0",
     "swagger-generator-express": "^2.1.1",
     "swagger-ui-express": "^4.1.6",
+    "tedious": "^14.0.0",
     "validator": "^13.5.2"
   }
 }
