--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,23 +1,26 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "admin",
+    "password": "n17dccn115",
+    "database": "uis",
+    "host": "ptituis-1.c6i9qtugjmar.ap-southeast-1.rds.amazonaws.com",
+    "port": 1433,
+    "dialect": "mssql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "admin",
+    "password": "n17dccn115",
+    "database": "uis",
+    "host": "ptituis-1.c6i9qtugjmar.ap-southeast-1.rds.amazonaws.com",
+    "port": 1433,
+    "dialect": "mssql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "username": "admin",
+    "password": "n17dccn115",
+    "database": "uis",
+    "host": "ptituis-1.c6i9qtugjmar.ap-southeast-1.rds.amazonaws.com",
+    "port": 1433,
+    "dialect": "mssql"
   }
 }
