--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.9.1",
     "pm2": "^5.1.0",
     "sequelize": "^6.12.0-alpha.1",
+    "sequelize-auto": "^0.8.6",
     "sequelize-cli": "^6.3.0",
     "swagger-generator-express": "^2.1.1",
     "swagger-ui-express": "^4.1.6",
