--- a/backend/dev.env
+++ b/backend/dev.env
@@ -1,7 +1,11 @@
-MODE=DEV
-DATABASE_URL=mongodb+srv://n17dccn115:n17dccn115@cluster0.fd7ii.mongodb.net/CHECKIN-UIS?retryWrites=true&w=majority
-PORT=3000
-JWT_KEY=tncnhan
-HOST=localhost:3000
-PROTOCOL=http
-DEPLOY_PORT=3000
+MODE=Dev
+DATABASE_URL=
+PORT=
+JWT_KEY=
+HOST=
+PROTOCOL=
+DEPLOY_PORT=
+PRIVATE_KEY_LINK=
+CERTIFICATE_KEY_LINK=
+CA_ROOT_KEY_LINK=
+CA_BUNDLE_KEY_LINK=
