--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "uis",
+  "name": "checkin-ptit",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "local": "nodemon ./bin/www -ext ejs, js",
-    "generate": "sequelize-auto -c ./config/config.json -o ./models"
+    "start-dev": "nodemon ./bin/www -ext ejs, js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -26,12 +25,8 @@
     "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
     "pm2": "^5.1.0",
-    "sequelize": "^6.12.0-alpha.1",
-    "sequelize-auto": "^0.8.6",
-    "sequelize-cli": "^6.3.0",
     "swagger-generator-express": "^2.1.1",
     "swagger-ui-express": "^4.1.6",
-    "tedious": "^14.0.0",
     "validator": "^13.5.2"
   }
 }
