--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "connected-react-router": "^6.9.2",
     "dotenv": "^10.0.0",
     "install": "^0.13.0",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
