--- a/frontend/.env.deploy
+++ b/frontend/.env.deploy
@@ -1,4 +1,4 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BACKEND_HOST=http://localhost:3000
+REACT_APP_BACKEND_HOST=http://54.254.154.61
 PORT=8080
 BACKEND_HOST=http://54.254.154.61
