--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,8 +31,7 @@
   },
   "scripts": {
     "start": "set PORT=8080 && react-scripts start",
-    "build": "sh -ac '. ./.env.${REACT_APP_ENV}; react-scripts build'",
-    "build:deploy": "REACT_APP_ENV=deploy npm run build",
+    "build": "SET REACT_APP_ENV=development && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
