--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "start": "set PORT=8080 && react-scripts start",
-    "build": "SET REACT_APP_ENV=development && react-scripts build",
+    "build": "set REACT_APP_ENV=development&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
